# rofi-calc

./: .clang-format  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Makefile.am  README.md  autogen.sh  configure.ac  justfile  meson.build  shell.nix
.github/workflows/: build.yml
src/: calc.c  meson.build
test/: config.rasi
